Finish Adding Credits

--- a/ikigai.html
+++ b/ikigai.html
@@ -232,6 +232,21 @@
 
                 <!-- Three -->
 					<section id="three">
+						<h2>Credits</h2>
+						<p>This project would have never come to fruition if it weren't for the amazing work of an entire community.
+							Namely, these include <a href="https://github.com/pret/pokeemerald">pokeemerald (PRET)</a>,
+							<a href="https://github.com/rh-hideout/pokeemerald-expansion">pokeemerald-expansion (ROM Hacking Hideout)</a>,
+							and all the amazing people in the <a href="https://discord.gg/hX3a63RYzZ">TeamAquasHideout Discord</a>.
+							<br />
+							<br />
+							For a full list of credits, please hit the button below.
+							<a href="./ikigai" class="button" style="display: block; width: 100%; max-width: 100%; margin: 20px auto 0; text-align: center;">Full List of Pokémon Ikigai Credits</a>
+							
+						</p>
+						</section>
+
+				<!-- Four -->
+					<section id="four">
 						<h2>Contact Me</h2>
 						<p>In order to get in touch with me, whether it be for suggestions or working together, please feel free to reach out to me using any of the links on this page.</p>
                         
