--- a/ikigai/credits.html
+++ b/ikigai/credits.html
@@ -98,6 +98,15 @@
 							<h2 style="text-align: center;">Pokémon Ikigai Full Credits List</h2>
 						</header>
                         <div class="section">
+                            <h3>Key Mentions</h3>
+                            <ul>
+                                <li><a href="https://github.com/pret/pokeemerald">pokeemerald (PRET)</a></li>
+                                <li><a href="https://github.com/rh-hideout/pokeemerald-expansion">pokeemerald-expansion (ROM Hacking Hideout)</a></li>
+                                <li><a href="https://discord.gg/hX3a63RYzZ">TeamAquasHideout Discord</a></li>
+                            </ul>
+                        </div>
+                    
+                        <div class="section">
                             <h3>User Interface (UI) Enhancements</h3>
                             <ul>
                                 <li><a href="https://github.com/grunt-lucas/pokeemerald-expansion/blob/sample-ui/README.md">Sample UI by Ghoulslash & Grant-Lucas</a></li>
@@ -202,12 +211,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.poptrox.min.js"></script>
+			<script src="/assets/js/browser.min.js"></script>
+			<script src="/assets/js/breakpoints.min.js"></script>
+			<script src="/assets/js/util.js"></script>
+			<script src="/assets/js/main.js"></script>
 
 	</body>
 </html>
