Fix Credits Link

--- a/ikigai.html
+++ b/ikigai.html
@@ -240,7 +240,7 @@
 							<br />
 							<br />
 							For a full list of credits, please hit the button below.
-							<a href="./ikigai" class="button" style="display: block; width: 100%; max-width: 100%; margin: 20px auto 0; text-align: center;">Full List of Pokémon Ikigai Credits</a>
+							<a href="./ikigai/credits.html" class="button" style="display: block; width: 100%; max-width: 100%; margin: 20px auto 0; text-align: center;">Full List of Pokémon Ikigai Credits</a>
 							
 						</p>
 						</section>
