[NEW PATCH] Try Fix Workflow

--- a/ikigai.html
+++ b/ikigai.html
@@ -89,8 +89,8 @@
 						RomPatcherWeb.initialize(
 							{
 								language: 'en',
-								requireValidation: false,
-								allowDropFiles: false
+								requireValidation: true,
+								allowDropFiles: true
 							},
 							patchInfo
 						);
