Move Patches, Webpage and Credits to Specific Ikigai Folder

--- a/ikigai/index.html
+++ b/ikigai/index.html
@@ -9,7 +9,7 @@
 		<meta name="robots" content="index, follow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 
 		<!-- Favicons -->
 		<link rel="icon" type="image/x-icon" href="https://hashtagmarky.github.io/images/infernape/favicon.ico">
@@ -76,8 +76,8 @@
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 		<!-- Rom Patcher JS needed CSS/JS files -->
-		<link type="text/css" rel="stylesheet" href="./rom-patcher-js/style.css" media="all" />
-		<script type="text/javascript" src="./rom-patcher-js/RomPatcher.webapp.js"></script>
+		<link type="text/css" rel="stylesheet" href="../rom-patcher-js/style.css" media="all" />
+		<script type="text/javascript" src="../rom-patcher-js/RomPatcher.webapp.js"></script>
 
 		<!-- Rom Patcher JS initialization -->
 		<script type="text/javascript">
@@ -112,11 +112,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="https://hashtagmarky.github.io" class="image avatar"><img src="images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
+					<a href="https://hashtagmarky.github.io" class="image avatar"><img src="../images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
 					<h1>Hi there!<br /> 
 					I'm <strong>HashtagMarky</strong>, a self-taught<br />
 					rom hacker, who is currently working<br />
-					on <a href="./ikigai">Pokémon Ikigai</a>.</h1>
+					on <a href="./">Pokémon Ikigai</a>.</h1>
 				</div>
 			</header>
 
@@ -128,7 +128,7 @@
 						<header class="major">
 							<h2 style="text-align: center;">Pokémon Ikigai</h2>
 						</header>
-                        <img src="images/projects/ikigai_title_solid_large.png" style="height: 100%; width: 100%; object-fit: contain;" alt="Pokémon Ikigai Box Art - Beta">
+                        <img src="../images/projects/ikigai_title_solid_large.png" style="height: 100%; width: 100%; object-fit: contain;" alt="Pokémon Ikigai Box Art - Beta">
 						<div>&nbsp;</div> <!-- Invisible Character for Padding -->
                         <p style="text-align: center;">Pokémon Ikigai is my first completely original rom hack. With a brand new story, 
                             gameplay mechanics and art style. I hope you will love this brand new Pokémon adventure.</p>
@@ -224,7 +224,7 @@
 
 					<div id="rom-patcher-powered" class="text-center">
 						<a href="https://github.com/marcrobledo/RomPatcher.js" target="_blank" style="color: #41bdc7; opacity: 1.0;"><img
-								src="rom-patcher-js/assets/powered_by_rom_patcher_js.png" loading="lazy" />Powered by Rom Patcher JS</a>
+								src="../rom-patcher-js/assets/powered_by_rom_patcher_js.png" loading="lazy" />Powered by Rom Patcher JS</a>
 					</div>
 				</section>
 
@@ -238,7 +238,7 @@
 							<br />
 							<br />
 							For a full list of credits, please hit the button below.
-							<a href="./ikigai/credits.html" class="button" style="display: block; width: 100%; max-width: 100%; margin: 20px auto 0; text-align: center;">Full List of Pokémon Ikigai Credits</a>
+							<a href="./credits.html" class="button" style="display: block; width: 100%; max-width: 100%; margin: 20px auto 0; text-align: center;">Full List of Pokémon Ikigai Credits</a>
 							
 						</p>
 						</section>
@@ -279,12 +279,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.poptrox.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
