Update Broken Links

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<!-- Favicons -->
-		<link rel="icon" type="image/x-icon" href="https://hashtagmarky.github.io/images/infernape/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="https://hashtagmarky.github.io/images/infernape/favicon/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://hashtagmarky.github.io/images/infernape/favicon/apple-touch-icon-57x57.png" />
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://hashtagmarky.github.io/images/infernape/favicon/apple-touch-icon-114x114.png" />
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://hashtagmarky.github.io/images/infernape/favicon/apple-touch-icon-72x72.png" />
@@ -107,7 +107,7 @@
 					<ul class="icons">
                         <li><a href="https://hashtagmarky.github.io" class="icon fa-home"><span class="label">Website</span></a></li>
 						<li><a href="https://github.com/HashtagMarky" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://x.com/hmprods" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://x.com/hashtagmrky" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://discord.gg/57QsBFdPQz" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 						<li><a href="https://tiktok.com/@HashtagMarky" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
 						<li><a href="https://YouTube.com/@hashtag-marky" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
