Add Versions Page

--- a/ikigai/index.html
+++ b/ikigai/index.html
@@ -171,7 +171,7 @@
 					<h2 style="text-align: center;">Downloads</h2>
 					<p style="text-align: center;">Use the <strong>Ikigai Patcher</strong> with a <strong>clean Pokémon Emerald rom</strong>,
 						in order to download a patched version <strong>Pokémon Ikigai</strong>.
-						Alternatively, download the patches directly and view their changelogs on the <a href="https://github.com/HashtagMarky/Pokemon-Ikigai-Production/releases">GitHub releases</a> page.
+						Alternatively, download the patches directly and view their changelogs on the <a href="./versions/">versions</a> page.
 					</p>
 					<!-- Rom Patcher JS container -->
 					<!--
