--- a/ikigai/credits.html
+++ b/ikigai/credits.html
@@ -102,7 +102,7 @@
 
                         <div id="markdown-container">Loading…</div>
 						<script>
-							fetch('./ikigai_credits.md')
+							fetch('./credits.md')
 							.then(response => response.text())
 							.then(text => {
 								document.getElementById('markdown-container').innerHTML = marked.parse(text);
