Edit TAH Credits

--- a/ikigai/index.html
+++ b/ikigai/index.html
@@ -306,7 +306,7 @@
 						<p>This project would have never come to fruition if it weren't for the amazing work of an entire community.
 							Namely, these include <a href="https://github.com/pret/pokeemerald">pokeemerald (PRET)</a>,
 							<a href="https://github.com/rh-hideout/pokeemerald-expansion">pokeemerald-expansion (ROM Hacking Hideout)</a>,
-							and all the amazing people in the <a href="https://discord.gg/hX3a63RYzZ">TeamAquasHideout Discord</a>.
+							and all the amazing people in the <a href="https://www.youtube.com/@TeamAquasHideout">Team Aqua's Hideout Discord</a>.
 							<br />
 							<br />
 							For a full list of credits, please hit the button below.
