Edit Download Patch Button

--- a/ikigai/index.html
+++ b/ikigai/index.html
@@ -243,8 +243,10 @@
 						<div class="text-center" id="rom-patcher-row-apply">
 							<div id="rom-patcher-row-error-message" class="margin-bottom"><span id="rom-patcher-error-message"></span>
 							</div>
+							<div>&nbsp;</div> <!-- Invisible Character for Padding -->
 							<button id="rom-patcher-button-apply" data-localize="yes" disabled>Download Pokémon Ikigai</button>
-							<button id="rom-patcher-button-download" data-localize="yes">Download Patch</button>
+							<div>&nbsp;</div> <!-- Invisible Character for Padding -->
+							<button id="rom-patcher-button-download" data-localize="yes" disabled>Download Patch</button>
 						</div>
 					</div>
 
