Update Discord Links, Images and Ikigai Page

--- a/ikigai/index.html
+++ b/ikigai/index.html
@@ -128,7 +128,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="https://hashtagmarky.github.io" class="image avatar"><img src="../images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
+					<a href="https://hashtagmarky.github.io" class="image avatar"><img src="../images/infernape/pmd-infernape-joyous.png" alt="" /></a>
 					<h1>Hi there!<br /> 
 					I'm <strong>HashtagMarky</strong>, a self-taught<br />
 					rom hacker, who is currently working<br />
@@ -144,10 +144,10 @@
 						<header class="major">
 							<h2 style="text-align: center;">Pokémon Ikigai</h2>
 						</header>
-                        <img src="./screenshots.png" style="height: 100%; width: 100%; object-fit: contain;" alt="Pokémon Ikigai">
+                        <img src="./screenshots.png" style="height: 100%; width: 100%; object-fit: contain;" alt="Pokémon Ikigai Screenshots">
 						<div>&nbsp;</div> <!-- Invisible Character for Padding -->
 
-                        <div id="markdown-container">Loading…</div>
+                        <div id="markdown-container" style="text-align: center;">Loading…</div>
 						<script>
 							fetch('./ikigai.md')
 							.then(response => response.text())
@@ -342,7 +342,7 @@
                         <li><a href="https://hashtagmarky.github.io" class="icon fa-home"><span class="label">Website</span></a></li>
 						<li><a href="https://github.com/HashtagMarky" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://x.com/hashtagmrky" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://discord.gg/57QsBFdPQz" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+						<li><a href="https://discord.gg/eMMUGXfpkd" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 						<li><a href="https://tiktok.com/@HashtagMarky" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
 						<li><a href="https://YouTube.com/@hashtag-marky" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 					</ul>
