--- a/discord.html
+++ b/discord.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="HashtagMarky">
 		<meta name="copyright" content="HashtagMarky Productions">
 		<meta name="robots" content="noindex, follow">
-        <meta http-equiv="refresh" content="5; url=https://discord.gg/57QsBFdPQz" />
+        <meta http-equiv="refresh" content="5; url=https://discord.gg/eMMUGXfpkd" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -81,7 +81,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="https://hashtagmarky.github.io" class="image avatar"><img src="images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
+					<a href="https://hashtagmarky.github.io" class="image avatar"><img src="images/infernape/pmd-infernape-joyous.png" alt="" /></a>
 					<h1>Not to worry.<br />
 					You'll reach your <strong>destination</strong> soon.</h1>
 				</div>
@@ -96,7 +96,7 @@
 							<h2 style="text-align: center;">Redirecting…</h2>
 						</header>
 						<p style="text-align: center;">If you're not automatically redirected,<br />
-                        click <a href="https://discord.gg/57QsBFdPQz">here</a> to go to the requested site.</p>
+                        click <a href="https://discord.gg/eMMUGXfpkd">here</a> to go to the requested site.</p>
 					</section>
 				
 			</div>
@@ -108,7 +108,7 @@
                         <li><a href="https://hashtagmarky.github.io" class="icon fa-home"><span class="label">Website</span></a></li>
 						<li><a href="https://github.com/HashtagMarky" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://x.com/hashtagmrky" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://discord.gg/57QsBFdPQz" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+						<li><a href="https://discord.gg/eMMUGXfpkd" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 						<li><a href="https://tiktok.com/@HashtagMarky" class="icon brands fa-tiktok"><span class="label">Tiktok</span></a></li>
 						<li><a href="https://YouTube.com/@hashtag-marky" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 					</ul>
