--- a/ikigai/credits.html
+++ b/ikigai/credits.html
@@ -135,8 +135,26 @@
                         -->
 					</section>
 
-                <!-- Two -->
+					<!-- Two -->
 					<section id="two">
+						<div>&nbsp;</div> <!-- Invisible Character for Padding -->
+						<h2 style="text-align: center;">Pokémon Emerald Expansion Full Credits List</h2>
+						<div id="emerald-expansion-credits" style="max-width: 100%; overflow-x: auto; padding: 1rem;">Loading...</div>
+						<script>
+							fetch('https://raw.githubusercontent.com/rh-hideout/pokeemerald-expansion/master/CREDITS.md')
+							.then(response => response.text())
+							.then(text => {
+								document.getElementById('emerald-expansion-credits').innerHTML = marked.parse(text);
+							})
+							.catch(err => {
+								document.getElementById('emerald-expansion-credits').innerText = "Failed to load credits file from pokeemerald-expansion.";
+								console.error(err);
+							});
+						</script>
+						</section>
+
+                <!-- Three -->
+					<section id="three">
 						<h2>Contact Me</h2>
 						<p>In order to get in touch with me, whether it be for suggestions or working together, please feel free to reach out to me using any of the links on this page.</p>
 	
