Remove Kofi Links

--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
 						</div>
 					-->
 					<div style="text-align: right;">
-					<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+					<!-- <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
 					<script type='text/javascript'>
 						kofiwidget2.init('Support Development', '#f09040', 'L4L4UVVP7');
 						kofiwidget2.draw();
-					</script>
+					</script> -->
 					</div>
 
 					<div>&nbsp;</div> <!-- Invisible Character for Padding -->
