--- a/ikigai/index.html
+++ b/ikigai/index.html
@@ -323,11 +323,11 @@
 						<p>In order to get in touch with me, whether it be for suggestions or working together, please feel free to reach out to me using any of the links on this page.</p>
                         
 					<div style="text-align: right;">
-						<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+						<!-- <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
 						<script type='text/javascript'>
 							kofiwidget2.init('Support Development', '#f09040', 'L4L4UVVP7');
 							kofiwidget2.draw();
-						</script>
+						</script> -->
 						</div>
 	
 						<div>&nbsp;</div> <!-- Invisible Character for Padding -->
